# eiger-coding-challenge

./: CMakeLists.txt  README.md  statement.md
src/: buffer.hh  engine.cc  engine.hh  engine.test.cc  hash.cc  hash.hh  hash.test.cc  main.cc
src/fdiff/: buffer.hh  chunk_hash.hh  chunk_match.hh  chunk_patch.hh  hash_computer.cc  hash_computer.hh  hash_computer.test.cc  hash_matcher.cc  hash_matcher.hh  hash_matcher.test.cc  patch_builder.cc  patch_builder.hh  patch_builder.test.cc
src/fs/: input_file.cc  input_file.hh  output_file.cc  output_file.hh
src/hash/: adler32.cc  rolling_hash.hh  rolling_hash.test.cc
test-files/: origin.md
